force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/CARE_Facility_Enrolled_SA__c.object-meta.xml
<CustomObject>
    <label>CARE Facility Enrolled SA</label>
    <nameField>
        <displayFormat>CFSA{000000000}</displayFormat>
        <label>NAME  (Facility SA Seq)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Facility Enrolled SA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>