force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/CARE_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>CARE_Facility_Name__c</fullName>
    <label>FACILITY</label>
    <referenceTo>CARE_Facility__c</referenceTo>
    <relationshipLabel>CARE Facility Enrolled SA</relationshipLabel>
    <relationshipName>CARE_Facility_Enrolled_SA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>