force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/CARE_SA_ID__c.field-meta.xml
<CustomField>
    <fullName>CARE_SA_ID__c</fullName>
    <formula>CARE_Site__r.SAID_EI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA ID</label>
    <type>Text</type>
</CustomField>