force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/CARE_Site__c.field-meta.xml
<CustomField>
    <fullName>CARE_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SITE</label>
    <referenceTo>EI_Site__c</referenceTo>
    <relationshipLabel>CARE Facility Enrolled SA</relationshipLabel>
    <relationshipName>CARE_Facility_Enrolled_SA</relationshipName>
    <type>Lookup</type>
</CustomField>