force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/CARE_Total_Unit__c.field-meta.xml
<CustomField>
    <fullName>CARE_Total_Unit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>