force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/CCB_APP_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CCB_APP_STATUS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCB APP STATUS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>