force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/CURR_CARE_GAS__c.field-meta.xml
<CustomField>
    <fullName>CURR_CARE_GAS__c</fullName>
    <label>CURR CARE GAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>