force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/CURR_FERA__c.field-meta.xml
<CustomField>
    <fullName>CURR_FERA__c</fullName>
    <label>CURR FERA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>