force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/EI_Space_Location__c.field-meta.xml
<CustomField>
    <fullName>EI_Space_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EI Space Location</label>
    <referenceTo>EI_Space_Location__c</referenceTo>
    <relationshipLabel>CARE Facility Enrolled SA (EI Space Location)</relationshipLabel>
    <relationshipName>CARE_Facility_Enrolled_SA1</relationshipName>
    <type>Lookup</type>
</CustomField>