force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/ENTRY_DATE_CARE1__c.field-meta.xml
<CustomField>
    <fullName>ENTRY_DATE_CARE1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ENTRY DATE CARE1</label>
    <type>Date</type>
</CustomField>