force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <formula>CARE_Facility_Name__r.FACILITY_NAME__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Name</label>
    <type>Text</type>
</CustomField>