force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/FACILITY_TYPE__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_TYPE__c</fullName>
    <label>FACILITY TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>SM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>