force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/Initial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Start_Date__c</fullName>
    <description>The initial start date for this SA, stays static going forward.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Start Date</label>
    <type>Date</type>
</CustomField>