force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/IS_COMMON_AREA__c.field-meta.xml
<CustomField>
    <fullName>IS_COMMON_AREA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IS COMMON AREA</label>
    <length>1</length>
    <type>Text</type>
</CustomField>