force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/IS_SATELLITE__c.field-meta.xml
<CustomField>
    <fullName>IS_SATELLITE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IS SATELLITE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>