force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/PREV_CARE_GAS__c.field-meta.xml
<CustomField>
    <fullName>PREV_CARE_GAS__c</fullName>
    <label>PREV CARE GAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>