force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/RS_CD__c.field-meta.xml
<CustomField>
    <fullName>RS_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RS CD</label>
    <length>8</length>
    <type>Text</type>
</CustomField>