force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/SERVICE_FULL_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_FULL_ADDRESS__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE FULL ADDRESS</label>
    <length>200</length>
    <type>Text</type>
</CustomField>