force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/SVC_TYPE_CD__c.field-meta.xml
<CustomField>
    <fullName>SVC_TYPE_CD__c</fullName>
    <label>SVC TYPE CD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>