force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/TOTAL_UNITS__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_UNITS__c</fullName>
    <label>TOTAL UNITS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>