force-app/main/default/objects/CARE_Facility_Enrolled_SA__c/fields/TRANS_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TRANS_TYPE__c</fullName>
    <label>TRANS TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>AD</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>